<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bizlinked</string>
    <string name="permission_denied">Permission Denied!!!</string>
    <string name="compressing_please_wait">Compressing... Please Wait!!</string>

    <string name="error_email">Email is not correct! Please try another</string>
    <string name="please_wait_data_is_loading">Please wait data is loading!!!</string>


    <string name="error_dial_code">Please select Dial Code!</string>
    <string name="error_password">Password should be 8 characters long</string>
    <string name="error_name">Name should be 3 characters long</string>
    <string name="error_phone">Phone number is not correct!</string>


    <!-- Bizlinked APP STRINGS   -->

    <string name="country_code">Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="err_enter_pin_correctly">Pin should not be empty/correct!</string>
    <string name="we_sent_you_verification">We sent a verification code on your phone number</string>
    <string name="no_network_available">No network available!</string>
    <string name="something_wrong">Something went wrong!</string>


    <string name="search_with_dots">Search with keywords...</string>
    <string name="bizlinked">Bizlinked</string>
    <string name="sales_distribution_solution_for_you">Your SnD Digital Solution</string>
    <string name="next_text">Next</string>
    <string name="phone_number_verification_text">Phone Number Verification</string>
    <string name="sign_in_text">Sign In</string>
    <string name="regenrate_otp_text">Regenerate OTP</string>
    <string name="profile_text">Profile</string>
    <string name="enter_your_company_name">Enter your company name</string>
    <string name="select_your_buiness_category">Select your business category</string>
    <string name="address">Address</string>
    <string name="on_map">On Map</string>
    <string name="save_text">Save</string>
    <string name="shop_no_office_no">Shop no. / Office no.</string>
    <string name="market_name">Market name</string>
    <string name="street_address">Street Address</string>
    <string name="error_shop_no_office_no">Shop no. / Office no. should not be empty!</string>
    <string name="error_market_name">Market name should not be empty!</string>
    <string name="error_street_address">Street Address should not be empty!</string>
    <string name="error_city">City name should not be empty!</string>
    <string name="error_business_category">Business Category   should not be empty!</string>
    <string name="select_your_city">Select your city</string>
    <string name="select_item">Select Item</string>
    <string name="continue_text">Continue</string>
    <string name="no_data_found">No data found</string>
    <string name="search_text">Search...</string>
    <string name="err_image_db_save">Error in saving image!</string>
    <string name="err_profile_db_save">Error in saving profile!</string>
    <string name="err_cat_db_save">Error in saving category!</string>

    <string name="links">Links</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="no_customers_found">No customers found.</string>
    <string name="invitation">Invitations</string>
    <string name="no_supplier_found">No suppliers data found.</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="categories">Categories</string>
    <string name="no_categories_found">No categories found!</string>
    <string name="no_cat_prod_data_found">No categories/products found!</string>
    <string name="category_name">Category Name</string>
    <string name="category_desc">Category Desc</string>
    <string name="description">Description</string>
    <string name="select_cat">Select Category</string>
    <string name="delete">Delete</string>
    <string name="err_cat_name_not_empty">Category name should not be empty!</string>
    <string name="err_product_name_not_empty">Product name should not be empty!</string>
    <string name="err_product_price">Product price should not be empty!</string>
    <string name="add_cat">Add Category</string>
    <string name="edit_cat">Edit Category</string>
    <string name="done_text">Done</string>
    <string name="back">Back</string>
    <string name="err_cat_db_update">Error in updating category!</string>
    <string name="err_product_db_update">Error in updating product!</string>
    <string name="alert">Alert!</string>
    <string name="are_you_sure_you_want_to_delete_cat">Are you sure you want to delete this category?</string>
    <string name="remove">Remove</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_category">Select Category</string>
    <string name="no_category_found">No categories found!</string>
    <string name="are_you_sure_you_want_to_delete_product">Are you sure you want to delete this product?</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Product Name</string>
    <string name="public_text">Public    </string>
    <string name="private_text">Private    </string>
    <string name="active_text">Active    </string>
    <string name="inactive_text">In-Active    </string>
    <string name="product_price">Price</string>
    <string name="edit_text">Edit</string>
    <string name="product_detail">Product Detail</string>
    <string name="no_products_found">No products found!</string>
    <string name="search_by_keyword">Search by keyword...</string>
    <string name="search_products">Search Products</string>
    <string name="setting_text">Setting</string>
    <string name="view_and_edit_profile">View/Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="google_map_key">a</string>
    <string name="my_wallet">My Wallet</string>
    <string name="no_packages_found">No Packages found!</string>
    <string name="orders_in_credit">ORDERS\nIN CREDIT</string>
    <string name="you_can_only">You can only approve orders as much as there are in your wallet.</string>
    <string name="claim_fo_free">Claim it for free</string>
    <string name="currency">Rs.</string>
    <string name="only_text">only</string>
    <string name="purchase">Purchase</string>
    <string name="pay_through">Pay through</string>
    <string name="update_text">Update</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="search_links">Search Links</string>
    <string name="linked_search">Linked</string>
    <string name="no_linked_found">No linked data found.</string>
    <string name="unlinked_search">Un-Linked</string>
    <string name="no_unlinked_found">No unlinked data found</string>
    <string name="add_as">Add As</string>
    <string name="choose_your_reltion">Choose your relation to the link</string>
    <string name="add_as_my_customer">Add as my Customer</string>
    <string name="add_as_my_supplier">Add as my Supplier</string>
    <string name="not_available">N/A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_invitations">Customer Invitations</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="no_invitations_found">No invitations found</string>
    <string name="supplier_invitations">Supplier Invitations</string>
    <string name="show_product">Show Products</string>
    <string name="unlink">Unlink</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order_can_not_be_created">Order cannot be created!</string>
    <string name="there_is_already_one_order">There is already one order pending for approval. New order can only be created once all previous orders are either accepted or rejected.</string>
    <string name="my_order">My Orders</string>
    <string name="placed">Placed</string>
    <string name="drafts">Drafts</string>
    <string name="pending">Pending</string>
    <string name="processed">Processed</string>
    <string name="quantity_not_be_empty">Quantity should not be empty!</string>
    <string name="credit_ins_err">No sufficient order credit to approve order. Please reload your account.</string>
    <string name="credit_ins_titile_err">Insufficient Credits!</string>
    <string name="cat_cant_be_delete">This category cannot be deleted due to its sub-categories/products exists.</string>
    <string name="products_with_appos">Product\'s</string>
    <string name="category_not_be_deleted">Category cannot be deleted!</string>
    <string name="are_you_sure_you_want_to_unlink">Are you sure you want to unlink this user. This action cannot be undone</string>
    <string name="orders_text">Orders</string>
    <string name="order_catt_be_deleted">After placed you can\'t delete order!</string>
    <string name="main_category">Main Category</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_category">Delete Category</string>
</resources>
