<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorScreenBg"
    android:fillViewport="true"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llMainView">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="@dimen/x20"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/ivCameraIcon"
                    android:layout_width="@dimen/x95"
                    android:layout_height="@dimen/x95"
                    android:layout_margin="@dimen/x10"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/x10"
                    android:background="@drawable/shadow_small"
                    android:src="@drawable/ic_svg_camera" />


                <!-- Photo Section Container-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/llPhotoSection"
                    android:orientation="horizontal"/>



            </LinearLayout>


        </HorizontalScrollView>

        <!-- Title View -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginBottom="@dimen/x10"
            android:visibility="visible">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:paddingTop="@dimen/x7"
                android:paddingBottom="@dimen/x7"
                style="?attr/primaryEdiTextTheme"
                android:maxLength="100"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="?attr/secondaryTextColor"/>

        </android.support.design.widget.TextInputLayout>
        <!-- Title View -->

        <!-- Desc View -->
        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150"
            android:hint="@string/description"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginBottom="@dimen/x10"
            android:padding="@dimen/x7"
            style="?attr/primaryEdiTextTheme"
            android:singleLine="false"
            android:maxLength="20000"
            android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
            android:background="@drawable/editetxt_border_drawable"
            android:gravity="start"
            android:textColorHint="?attr/secondaryTextColor"/>

        <!-- Desc View -->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginBottom="@dimen/x10"
            android:visibility="visible">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPrice"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price"
                    android:paddingTop="@dimen/x7"
                    android:paddingBottom="@dimen/x7"
                    style="?attr/primaryEdiTextTheme"
                    android:maxLength="10"
                    android:inputType="numberDecimal"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x1"
                    android:background="?attr/secondaryTextColor"/>

            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/swActiveInActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:checked="true"
                    android:text="@string/active_text"
                    android:thumbTextPadding="@dimen/x10"
                    style="?attr/primaryEdiTextTheme"
                    app:thumbTint="?attr/colorPrimary"
                    android:textOff="@string/inactive_text"
                    android:textOn="@string/active_text"/>


            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/swPublicPrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:checked="false"
                    style="?attr/primaryEdiTextTheme"
                    app:thumbTint="?attr/colorPrimary"
                    android:textOff="@string/private_text"
                    android:textOn="@string/public_text"
                    android:text="@string/private_text"/>


            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x15"
            android:layout_marginEnd="@dimen/x15"
            android:layout_marginTop="@dimen/x15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCatSelected"
                android:text="@string/select_cat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?attr/primaryButtonTheme"
                android:paddingTop="@dimen/x5"
                android:paddingBottom="@dimen/x5"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/ivRemoveSelectedParentCat"
                android:layout_width="@dimen/x50"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button_red_color"
                android:paddingTop="@dimen/x5"
                android:paddingBottom="@dimen/x5"
                android:paddingStart="@dimen/x12"
                android:paddingEnd="@dimen/x12"
                android:layout_marginStart="@dimen/x10"
                android:src="@drawable/ic_cancel"
                android:visibility="visible"/>

        </LinearLayout>


        <Button
            android:id="@+id/btnProductDelete"
            android:text="@string/delete_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/primaryButtonTheme"
            android:background="@drawable/rounded_button_red_color"
            android:layout_margin="@dimen/x15"
            android:paddingTop="@dimen/x5"
            android:paddingBottom="@dimen/x5"
            android:visibility="visible"/>



    </LinearLayout>


</ScrollView>