<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorScreenBg"
    android:gravity="center"
    android:paddingStart="@dimen/x10"
    android:paddingEnd="@dimen/x10"
    xmlns:timer="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llMainView"
    android:clickable="true">

    <TextView
        android:id="@+id/tvTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/primaryTextColor"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/s18"
        android:layout_marginStart="@dimen/x15"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginBottom="@dimen/x25"
        android:text="@string/we_sent_you_verification"
        android:visibility="gone"/>


    <com.poovam.pinedittextfield.LinePinField
        android:id="@+id/linePinFiledCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x15"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginBottom="@dimen/x15"
        android:inputType="number"
        android:textSize="@dimen/s16"
        app:isCursorEnabled="false"
        app:highlightType="currentField"
        app:fieldColor="?attr/secondaryTextColor"
        app:highlightColor="?attr/colorPrimary"
        app:lineThickness="@dimen/x1"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">


        <FrameLayout
            android:id="@+id/flTimerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">

            <io.github.krtkush.lineartimer.LinearTimerView
                android:id="@+id/ltResendTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                timer:radius="@dimen/x8"
                timer:strokeWidth="@dimen/x1"
                timer:initialColor="@color/light_grey"
                timer:progressColor="?attr/colorPrimary"/>

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primaryTextColor"
                android:fontFamily="@font/lato_bold"
                android:textSize="@dimen/s8"
                android:layout_gravity="center"/>


        </FrameLayout>

        <TextView
            android:id="@+id/tvResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/primaryTextColor"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/s14"
            android:text="@string/regenrate_otp_text"
            android:padding="@dimen/x15"
            android:visibility="gone"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnSignIn"
        android:text="@string/sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/primaryButtonTheme"
        android:paddingTop="@dimen/x5"
        android:paddingBottom="@dimen/x5"
        android:layout_marginTop="@dimen/x15"
        android:layout_marginBottom="@dimen/x15"
        android:layout_marginStart="@dimen/x90"
        android:layout_marginEnd="@dimen/x90"
        android:visibility="gone"/>


</LinearLayout>