<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorScreenBg"
    android:clickable="true"
    android:id="@+id/llMainView"
    android:paddingStart="@dimen/x20"
    android:paddingEnd="@dimen/x20"
    android:paddingTop="@dimen/x15">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/round_bg_primary_color"
        android:padding="@dimen/x30"
        android:visibility="gone">


        <TextView
            android:id="@+id/tvCreditBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_black"
            android:layout_marginTop="@dimen/x5"
            android:textSize="@dimen/s30"
            android:padding="@dimen/x10"
            android:elevation="@dimen/x3"
            android:text="N/A"/>

        <View
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x1"
            android:background="@color/white"/>


        <TextView
            android:id="@+id/tvDescText"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="@dimen/x5"
            android:textSize="@dimen/s18"
            android:padding="@dimen/x10"
            android:elevation="@dimen/x3"
            android:text="@string/orders_in_credit"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tvParaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/primaryTextColor"
        android:gravity="center"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/s13"
        android:padding="@dimen/x10"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginEnd="@dimen/x30"
        android:layout_marginTop="@dimen/x15"
        android:text="@string/you_can_only"
        android:visibility="gone"/>


    <!-- Company Package List Section -->
    <FrameLayout
        android:id="@+id/flCompanyPackageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x10"
        android:visibility="gone">


        <!-- NearBy Doctor Listing  -->

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshCompanyPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCompanyPackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x10"
                android:visibility="gone"/>

        </android.support.v4.widget.SwipeRefreshLayout>


        <!-- No data Found  Section -->
        <LinearLayout
            android:id="@+id/llNoCompanyPackageDataFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/x5"
            android:layout_marginEnd="@dimen/x5"
            android:layout_gravity="center"
            android:padding="@dimen/x5"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primaryTextColor"
                android:fontFamily="@font/lato_black"
                android:textSize="@dimen/s12"
                android:text="@string/no_packages_found"
                android:layout_marginEnd="@dimen/x5"/>


        </LinearLayout>
        <!-- No data Found Section -->


    </FrameLayout>
    <!-- Company Package List Section -->


</LinearLayout>


